# PrivStatBool

./: CMakeLists.txt  README.md
data/: 3d_toy_data.csv  sort_data.csv
demo/: CMakeLists.txt
demo/arith/: CMakeLists.txt  demoAdd.cpp  demoDiv.cpp  demoMult.cpp  demoSub.cpp
demo/basic/: CMakeLists.txt  demoMinMax.cpp
demo/nonLinear/: CMakeLists.txt  demoSqRoot.cpp
demo/sort/: CMakeLists.txt  demoFindMinMax.cpp  demoMedian.cpp  demoPercentile.cpp  demoQuartile.cpp  demoRange.cpp  demoSort.cpp
demo/stat/: CMakeLists.txt  demoConfidenceInterval.cpp  demoCovariance.cpp  demoMean.cpp  demoSkewness.cpp  demoStd.cpp  demoSum.cpp  demoVar.cpp
include/: utilMat.h  utilServer.h  utils.h
include/experiment/: experiFunc.h  metric.h
include/native/: HomArith.h  HomBitOper.h  HomComp.h  HomMatrix.h  HomMinMax.h  HomNonLinearOper.h  HomSort.h  HomStatBasic.h
include/optimized/: HomArithOPT.h
include/plain/: plainSort.h  plainStat.h
src/: utilMat.cpp  utilServer.cpp  utils.cpp
src/experiment/: experiFunc.cpp  metric.cpp
src/native/: HomArith.cpp  HomBitOper.cpp  HomComp.cpp  HomMinMax.cpp  HomNonLinearOper.cpp  HomSort.cpp  HomStatBasic.cpp
src/optimized/: HomArithOPT.cpp
src/plain/: plainSort.cpp  plainStat.cpp
test/: CMakeLists.txt
test/arith/: CMakeLists.txt  timeArith.cpp
test/basic/: CMakeLists.txt  testComp.cpp  testHomBitOper.cpp  timeBitOper.cpp  timeBitOperAbsTwos.cpp  timeComp.cpp  timeMinMax.cpp
test/nonLinear/: CMakeLists.txt  testHomSqRoot.cpp
test/opt/: CMakeLists.txt  testAddOpt.cpp  testAddPlainOpt.cpp
